--- a/demoapp1/Classlink.Dashboard.Web.csproj
+++ b/demoapp1/Classlink.Dashboard.Web.csproj
@@ -269,6 +269,19 @@
     <Content Include="code\MainSidebar.html" />
     <Content Include="code\sidebar.js" />
     <Content Include="code\theme1.css" />
+    <Content Include="Content\BootSideMenu\css\BootSideMenu.css" />
+    <Content Include="Content\BootSideMenu\examples\0-menu-template.html" />
+    <Content Include="Content\BootSideMenu\examples\1-simple-left.html" />
+    <Content Include="Content\BootSideMenu\examples\2-simple-right.html" />
+    <Content Include="Content\BootSideMenu\examples\3-duration.html" />
+    <Content Include="Content\BootSideMenu\examples\4-width.html" />
+    <Content Include="Content\BootSideMenu\examples\5-close-on-click.html" />
+    <Content Include="Content\BootSideMenu\examples\6-events.html" />
+    <Content Include="Content\BootSideMenu\examples\7-on-toggler-click.html" />
+    <Content Include="Content\BootSideMenu\img\avatar.png" />
+    <Content Include="Content\BootSideMenu\img\paypal_coffee.png" />
+    <Content Include="Content\BootSideMenu\index.html" />
+    <Content Include="Content\BootSideMenu\js\BootSideMenu.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="demoscript\font-awesome.min.css" />
@@ -311,6 +324,8 @@
     <Content Include="demoscript\compiled.min.css" />
     <Content Include="BootSideMenu\package.json" />
     <Content Include="BootSideMenu\README.md" />
+    <Content Include="Content\BootSideMenu\package.json" />
+    <Content Include="Content\BootSideMenu\README.md" />
     <None Include="Properties\PublishProfiles\rahul.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
