--- a/Classlink.web/Classlink.web.csproj
+++ b/Classlink.web/Classlink.web.csproj
@@ -439,6 +439,8 @@
     <Content Include="fonts\websymbols-regular-webfont.eot" />
     <Content Include="fonts\websymbols-regular-webfont.ttf" />
     <Content Include="fonts\websymbols-regular-webfont.woff" />
+    <None Include="Properties\PublishProfiles\PWebApp - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\PWebApp - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\rahul.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
