--- a/Classlink.web/Classlink.web.csproj
+++ b/Classlink.web/Classlink.web.csproj
@@ -508,6 +508,22 @@
     <Content Include="Views\Classlink\Index.cshtml" />
     <Content Include="Views\Classlink\Home.cshtml" />
     <Content Include="Views\Classlink\MyFiles.cshtml" />
+    <Content Include="WinJS\css\ui-dark.css" />
+    <Content Include="WinJS\css\ui-dark.min.css" />
+    <Content Include="WinJS\css\ui-light.css" />
+    <Content Include="WinJS\css\ui-light.min.css" />
+    <Content Include="WinJS\js\base.js" />
+    <Content Include="WinJS\js\base.min.js" />
+    <Content Include="WinJS\js\en-US\ui.strings.js" />
+    <Content Include="WinJS\js\ui.js" />
+    <Content Include="WinJS\js\ui.min.js" />
+    <Content Include="WinJS\js\ui.min.js.map" />
+    <Content Include="WinJS\js\base.min.js.map" />
+    <Content Include="WinJS\fonts\Symbols.ttf" />
+    <None Include="WinJS\js\WinJS.intellisense.js" />
+    <Content Include="WinJS\js\WinJS.intellisense-setup.js" />
+    <Content Include="WinJS\License.txt" />
+    <Content Include="WinJS\README.md" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
