--- a/Classlink.web/packages.config
+++ b/Classlink.web/packages.config
@@ -38,4 +38,5 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
+  <package id="WinJS" version="4.4.3" targetFramework="net452" />
 </packages>
